# Airnominal-API

./: .env.example  .gitignore  Dockerfile  README.md  config.ini.example  pyproject.toml
.github/workflows/: docker-image.yml
AirnominalFastApi/: auth.py  config.py  data_endpoint.py  pyproject.toml  register.py
AirnominalFastApi/.cph/: .register.py_bc077b3bb3a982c465345748b7d777d1.prob
AirnominalFastApi/airnominalfastapi/: auth.py  config.py  influx.py  main.py  main2.py  mongo.py  register.py
airnominal/: Untitled-1.json  __init__.py  auth.py  config.py  data_endpoint.py  influx.py  main.py  mongo.py  register.py
tests/: test_airnominalfastapi.py
