[tool.poetry]
name = "airnominal"
description = "An API for handling Airnominal backend"
authors = ["Jakob Kralj", "Filip Štamcar"]
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
influxdb-client = "^1.36.1"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.93.0"}
pymongo = "^4.3.3"
fastapi-sso = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
